--- a/Prosecutions of children and young people.ipynb
+++ b/Prosecutions of children and young people.ipynb
@@ -276,18 +276,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-d1da55810ee0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# We can also add columns and manipulate the DataFrame. Let's times balance by 10, and add the output to a new column.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdf_7361\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwithColumn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'YearGroup'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Year'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Question: If we print the df DataFrame again, why is the 'balance_times_10 column' missing?\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mdf_7361\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+----+--------------------+---+------+---------+--------------------+-----+-----+---------+\n",
+      "|    _c0|Year|         MainOffence|Age|Gender|Ethnicity|             Outcome|Value|Flags|YearGroup|\n",
+      "+-------+----+--------------------+---+------+---------+--------------------+-----+-----+---------+\n",
+      "| 2892.0|1992|Public Order Offe...| 14|Female| European|Convicted and sen...|    1|   NA|    19920|\n",
+      "| 2602.0|1992|Unlawful Entry Wi...| 14|Female| European|           Dismissed|    1|   NA|    19920|\n",
+      "| 2648.0|1992|Theft And Related...| 14|Female| European|Youth Court prove...|    1|   NA|    19920|\n",
+      "| 2558.0|1992|Unlawful Entry Wi...| 14|Female| European|Youth Court prove...|    1|   NA|    19920|\n",
+      "| 2838.0|1992|Property Damage A...| 14|Female| European|Youth Court prove...|    1|   NA|    19920|\n",
+      "| 2672.0|1992|Theft And Related...| 14|Female| European|Youth Court prove...|    1|   NA|    19920|\n",
+      "| 2582.0|1992|Unlawful Entry Wi...| 14|Female| European|Youth Court prove...|    1|   NA|    19920|\n",
+      "|20523.0|1992|Dangerous Or Negl...| 15|Female| European|Convicted and sen...|    1|   NA|    19920|\n",
+      "|20955.0|1992|Illicit Drug Offe...| 15|Female| European|Convicted and sen...|    1|   NA|    19920|\n",
+      "|21302.0|1992|Offences Against ...| 15|Female| European|Convicted and sen...|    1|   NA|    19920|\n",
+      "|20946.0|1992|Illicit Drug Offe...| 15|Female| European|           Dismissed|    1|   NA|    19920|\n",
+      "|21312.0|1992|Miscellaneous Off...| 15|Female| European|       Other outcome|    1|   NA|    19920|\n",
+      "|20507.0|1992|Dangerous Or Negl...| 15|Female| European|           Withdrawn|    1|   NA|    19920|\n",
+      "|20908.0|1992|Fraud, Deception ...| 15|Female| European|           Withdrawn|    1|   NA|    19920|\n",
+      "|20818.0|1992|Theft And Related...| 15|Female| European|           Withdrawn|    1|   NA|    19920|\n",
+      "|20364.0|1992|Acts Intended To ...| 15|Female| European|Youth Court prove...|    1|   NA|    19920|\n",
+      "|20871.0|1992|Fraud, Deception ...| 15|Female| European|Youth Court prove...|    1|   NA|    19920|\n",
+      "|21027.0|1992|Property Damage A...| 15|Female| European|Youth Court prove...|    1|   NA|    19920|\n",
+      "|21103.0|1992|Public Order Offe...| 15|Female| European|Youth Court prove...|    1|   NA|    19920|\n",
+      "|20766.0|1992|Theft And Related...| 15|Female| European|Youth Court prove...|    1|   NA|    19920|\n",
+      "+-------+----+--------------------+---+------+---------+--------------------+-----+-----+---------+\n",
+      "only showing top 20 rows\n",
+      "\n",
+      "+-------+----+--------------------+---+------+---------+--------------------+-----+-----+\n",
+      "|    _c0|Year|         MainOffence|Age|Gender|Ethnicity|             Outcome|Value|Flags|\n",
+      "+-------+----+--------------------+---+------+---------+--------------------+-----+-----+\n",
+      "| 2892.0|1992|Public Order Offe...| 14|Female| European|Convicted and sen...|    1|   NA|\n",
+      "| 2602.0|1992|Unlawful Entry Wi...| 14|Female| European|           Dismissed|    1|   NA|\n",
+      "| 2648.0|1992|Theft And Related...| 14|Female| European|Youth Court prove...|    1|   NA|\n",
+      "| 2558.0|1992|Unlawful Entry Wi...| 14|Female| European|Youth Court prove...|    1|   NA|\n",
+      "| 2838.0|1992|Property Damage A...| 14|Female| European|Youth Court prove...|    1|   NA|\n",
+      "| 2672.0|1992|Theft And Related...| 14|Female| European|Youth Court prove...|    1|   NA|\n",
+      "| 2582.0|1992|Unlawful Entry Wi...| 14|Female| European|Youth Court prove...|    1|   NA|\n",
+      "|20523.0|1992|Dangerous Or Negl...| 15|Female| European|Convicted and sen...|    1|   NA|\n",
+      "|20955.0|1992|Illicit Drug Offe...| 15|Female| European|Convicted and sen...|    1|   NA|\n",
+      "|21302.0|1992|Offences Against ...| 15|Female| European|Convicted and sen...|    1|   NA|\n",
+      "|20946.0|1992|Illicit Drug Offe...| 15|Female| European|           Dismissed|    1|   NA|\n",
+      "|21312.0|1992|Miscellaneous Off...| 15|Female| European|       Other outcome|    1|   NA|\n",
+      "|20507.0|1992|Dangerous Or Negl...| 15|Female| European|           Withdrawn|    1|   NA|\n",
+      "|20908.0|1992|Fraud, Deception ...| 15|Female| European|           Withdrawn|    1|   NA|\n",
+      "|20818.0|1992|Theft And Related...| 15|Female| European|           Withdrawn|    1|   NA|\n",
+      "|20364.0|1992|Acts Intended To ...| 15|Female| European|Youth Court prove...|    1|   NA|\n",
+      "|20871.0|1992|Fraud, Deception ...| 15|Female| European|Youth Court prove...|    1|   NA|\n",
+      "|21027.0|1992|Property Damage A...| 15|Female| European|Youth Court prove...|    1|   NA|\n",
+      "|21103.0|1992|Public Order Offe...| 15|Female| European|Youth Court prove...|    1|   NA|\n",
+      "|20766.0|1992|Theft And Related...| 15|Female| European|Youth Court prove...|    1|   NA|\n",
+      "+-------+----+--------------------+---+------+---------+--------------------+-----+-----+\n",
+      "only showing top 20 rows\n",
+      "\n"
      ]
     }
    ],
